<resources>
    <string name="app_name">indekospintar</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="lampu_on_off">Lampu: ON/OFF</string>
    <string name="distance_0_cm">Distance: 0 CM</string>
    <string name="keamanan_kebakaran_on_off">Keamanan Kebakaran: ON/OFF</string>
    <string name="keamanan_anti_maling_on_off">Keamanan Anti Maling: ON/OFF</string>
    <string name="informasi_smart_kos">INFORMASI SMART KOS</string>
    <string name="lampu">Lampu</string>
    <string name="keamanan_nkebakaran">Keamanan \nKebakaran</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
</resources>